--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "ip": "1.1.5",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "moment": "^2.24.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -86,7 +87,10 @@
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-widgets": "^4.4.11",
+    "react-widgets-moment": "^4.0.27",
     "redux": "4.0.1",
+    "redux-form": "^8.2.6",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
